--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -16,8 +16,14 @@ if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
 endif()
 
 set(KJEDITOR_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
-set(CMAKE_INSTALL_PREFIX "${Editor_ROOT_DIR}/bin")
+set(CMAKE_INSTALL_PREFIX "${KJEDITOR_ROOT_DIR}/bin")
 set(BINARY_ROOT_DIR "${CMAKE_INSTALL_PREFIX}/")
+# 设置静态库文件目录
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${KJEDITOR_ROOT_DIR}/out/lib)
+# 动态库文件目录
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${KJEDITOR_ROOT_DIR}/out/lib)
+# 可执行文件目录
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${KJEDITOR_ROOT_DIR}/out/bin)
 
 
 add_subdirectory(Editor)
