--- a/Editor/Runtime/CMakelists.txt
+++ b/Editor/Runtime/CMakelists.txt
@@ -34,6 +34,7 @@ target_link_libraries(${TARGET_NAME} PUBLIC
           ${OSGPARTICLE_LIBRARIES}
           ${OSGANIMATION_LIBRARIES}
           osgQOpenGL
+          spdlog::spdlog
           )
 
 
