--- a/Editor/App/CMakelists.txt
+++ b/Editor/App/CMakelists.txt
@@ -17,6 +17,12 @@ target_compile_options(${TARGET_NAME} PUBLIC "$<$<COMPILE_LANG_AND_ID:CXX,MSVC>:
 
 target_link_libraries(${TARGET_NAME} EditorRuntime)
 
+target_include_directories(
+  ${TARGET_NAME} 
+  PUBLIC 
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>
+)
+
 # add_custom_command(TARGET ${TARGET_NAME} POST_BUILD
 # COMMAND ${CMAKE_COMMAND} -E make_directory "${BINARY_ROOT_DIR}"
 # COMMAND ${CMAKE_COMMAND} -E copy "${ENGINE_ROOT_DIR}/${TARGET_NAME}.ini" "${BINARY_ROOT_DIR}"
