--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,6 +88,8 @@
         "xtr1common": "cpp",
         "xtree": "cpp",
         "xutility": "cpp",
-        "export": "cpp"
+        "export": "cpp",
+        "osgqopenglwidget": "cpp",
+        "osgqopenglwindow": "cpp"
     },
 }
