--- a/Editor/Runtime/CMakelists.txt
+++ b/Editor/Runtime/CMakelists.txt
@@ -36,6 +36,7 @@ target_link_libraries(${TARGET_NAME} PUBLIC
           spdlog::spdlog
           ads::qtadvanceddocking
           ENTT
+          glad
           )
 
 
