--- a/Editor/App/CMakelists.txt
+++ b/Editor/App/CMakelists.txt
@@ -20,7 +20,12 @@ set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "Editor")
 
 target_compile_options(${TARGET_NAME} PUBLIC "$<$<COMPILE_LANG_AND_ID:CXX,MSVC>:/WX->")
 
-target_link_libraries(${TARGET_NAME} EditorRuntime)
+target_link_libraries(${TARGET_NAME} 
+          EditorRuntime 
+          Qt5::Widgets
+          Qt5::OpenGL
+          ads::qtadvanceddocking
+)
 
 target_include_directories(
   ${TARGET_NAME} 
