--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Editor/Vendors/spdlog"]
 	path = Editor/Vendors/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "Editor/Vendors/glm"]
+	path = Editor/Vendors/glm
+	url = https://github.com/g-truc/glm.git
