--- a/Editor/Runtime/CMakelists.txt
+++ b/Editor/Runtime/CMakelists.txt
@@ -19,6 +19,7 @@ target_link_libraries(${TARGET_NAME} PUBLIC
           spdlog::spdlog
           ENTT
           glad
+          glm
           )
 
 
