--- a/Editor/CMakeLists.txt
+++ b/Editor/CMakeLists.txt
@@ -3,6 +3,7 @@ find_package(Qt5 COMPONENTS Widgets OpenGL)
 
 find_package(qtadvanceddocking CONFIG REQUIRED)
 
+add_subdirectory(Shader)
 add_subdirectory(Vendors)
 add_subdirectory(Runtime)
 add_subdirectory(App)
