--- a/Editor/Runtime/CMakelists.txt
+++ b/Editor/Runtime/CMakelists.txt
@@ -27,4 +27,5 @@ target_include_directories(
   ${TARGET_NAME} 
   PUBLIC 
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/>
+  $<BUILD_INTERFACE:${KJEDITOR_ROOT_DIR}/Editor/Shader/generated/cpp>
 )
