--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.19 FATAL_ERROR)
 
 project(KJEDITOR VERSION 0.1.0)
 
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
