--- a/Editor/Runtime/CMakelists.txt
+++ b/Editor/Runtime/CMakelists.txt
@@ -11,7 +11,7 @@ set_target_properties(${TARGET_NAME} PROPERTIES CXX_STANDARD 17)
 set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "Editor")
 
 # being a cross-platform target, we enforce standards conformance on MSVC
-target_compile_options(${TARGET_NAME} PUBLIC "$<$<COMPILE_LANG_AND_ID:CXX,MSVC>:/permissive->")
+# target_compile_options(${TARGET_NAME} PUBLIC "$<$<COMPILE_LANG_AND_ID:CXX,MSVC>:/permissive->")
 target_compile_options(${TARGET_NAME} PUBLIC "$<$<COMPILE_LANG_AND_ID:CXX,MSVC>:/WX->")
 
 # Link dependencies    
@@ -20,8 +20,9 @@ target_link_libraries(${TARGET_NAME} PUBLIC
           ENTT
           glad
           glm
+          vcglib
+          vcgwrap
           )
-
 
 target_include_directories(
   ${TARGET_NAME} 
