--- a/Editor/Runtime/CMakelists.txt
+++ b/Editor/Runtime/CMakelists.txt
@@ -22,6 +22,7 @@ target_link_libraries(${TARGET_NAME} PUBLIC
           glm
           vcglib
           vcgwrap
+          stb
           )
 
 target_include_directories(
